--- a/styles.css
+++ b/styles.css
@@ -138,3 +138,37 @@ nav a {
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
+
+.epmloyees {
+  display: flex;
+  margin-top: 20px;
+  justify-content: space-around;
+  align-content: center;
+}
+
+.employee-card {
+  width: 20%;
+  margin: 10px;
+  box-sizing: border-box;
+}
+
+.top-image {
+  border: 10px solid red;
+  height: 65%;
+  width: 100%;
+  box-sizing: border-box;
+  border-radius: 10px;
+}
+
+.top-image img {
+  width: 100%;
+  height: 100%;
+}
+
+footer {
+  display: flex;
+  height: 3rem;
+  align-items: center;
+  margin: 20px;
+  background-color: gray;
+}
